--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "socket.io": "^3.1.0",
+    "socket.io-client": "^3.1.0",
+    "express": "^4.17.1"
   },
   "scripts": {
     "start": "react-scripts start",
